--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "react-typescript",
+  "name": "react-typescript-antd",
   "version": "1.0.0",
   "description": "react脚手架",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "cross-env NODE_ENV=development webpack serve --config ./scripts/config/webpack.development.js",
     "build": "cross-env NODE_ENV=production webpack --config ./scripts/config/webpack.production.js",
     "lint": "npm run lint-eslint && npm run lint-stylelint",
@@ -112,6 +111,9 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   }
 }
